--- a/doors/explode.html
+++ b/doors/explode.html
@@ -1,2 +1,2 @@
-<link rel="manifest" href="explodemanifest.json">
+<link rel="manifest" href="expodemanifest.json">
 <title>Internet Exploder</title>
