--- a/test_for_flappy.html
+++ b/test_for_flappy.html
@@ -134,7 +134,7 @@ function accelerate(n) {
 }
 </script>
 <br>
-<input onkeydown="accelerate(-0.05)" onkeyup="accelerate(0.05)" value="  " autofocus="true" id="hi">
+<input onkeydown="accelerate(-0.05)" onkeyup="accelerate(0.05)" value="  " autofocus id="hi">
 <button onclick='window.location=window.location'>
 RESTART
 </button>
