--- a/test_for_flappy.html
+++ b/test_for_flappy.html
@@ -2,7 +2,7 @@
 <title>
 Flappy Square
 </title>
-<html onload='document.getElementById("hi").focus();'>
+<html >
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <style>
@@ -13,7 +13,7 @@ canvas {
 </style>
 </head>
 <body onload="startGame()">
-<script >
+<script onload='document.getElementById("hi").focus();'>
 
 var myGamePiece;
 var myObstacles = [];
